Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-6413

Sporadic failure of HA tests causd by maxNegotiateTimeout

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.31
    • 0.32
    • C++ Broker
    • None

    Description

      Sporadic connection failures in HA tests with the broker logs showing: "No protocol received closing". This indicates negotiation exceeded the maxNegotiateTime setting.

      Attachments

        Activity

          People

            aconway Alan Conway
            aconway Alan Conway
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: